Motion blur not working for fluid sim in USD #96182

Closed
opened 2022-03-05 12:15:18 +01:00 by Robert Rioux · 8 comments

System Information
Operating system: macOS-10.15.7-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro Vega 64 OpenGL Engine ATI Technologies Inc. 4.1 ATI-3.10.18

Blender Version
Broken: version: 3.0.1, branch: master, commit date: 2022-01-25 17:19, hash: dc2d180181
Worked: (newest version of Blender that worked as expected)

Short description of error
Motion blur not working for fluid sim in USD

Exact steps for others to reproduce the error
Cache the sim from the attached file. Export as USD. Render in Cycles with motion blur.

It works in alembic but the cache needs to be in uni cache. VDB doesn't work

MB_USD.blend

**System Information** Operating system: macOS-10.15.7-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro Vega 64 OpenGL Engine ATI Technologies Inc. 4.1 ATI-3.10.18 **Blender Version** Broken: version: 3.0.1, branch: master, commit date: 2022-01-25 17:19, hash: `dc2d180181` Worked: (newest version of Blender that worked as expected) **Short description of error** Motion blur not working for fluid sim in USD **Exact steps for others to reproduce the error** Cache the sim from the attached file. Export as USD. Render in Cycles with motion blur. It works in alembic but the cache needs to be in uni cache. VDB doesn't work [MB_USD.blend](https://archive.blender.org/developer/F12898252/MB_USD.blend)
Author

Added subscriber: @Funnybob

Added subscriber: @Funnybob
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'
Member

The writer does seem to support velocities, but the reader doesn't. So this might be a current limitation. Tagging the module for more information.

The writer does seem to support velocities, but the reader doesn't. So this might be a current limitation. Tagging the module for more information.

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich

Indeed the importer does not read velocity, marking this as to-do.

Indeed the importer does not read velocity, marking this as to-do.

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'
Sonny Campbell self-assigned this 2022-06-28 14:44:11 +02:00
Bastien Montagne added this to the Pipeline, Assets & IO project 2023-02-09 15:40:38 +01:00
Philipp Oeser removed the
Interest
Pipeline, Assets & IO
label 2023-02-10 08:54:05 +01:00
Bastien Montagne modified the project from Pipeline, Assets & IO to USD 2023-02-10 11:08:11 +01:00

Fully fixed in 4.2 with commit 37cc387fcb

For USD files produced with Blender things will also happen to work in 4.0/4.1 but the general fix will be in 4.2

Fully fixed in 4.2 with commit 37cc387fcb3cac5b436066e768789e9bdfa8cc3e For USD files produced with Blender things will also happen to work in 4.0/4.1 but the general fix will be in 4.2
Blender Bot added
Status
Archived
and removed
Status
Confirmed
labels 2024-04-23 21:17:25 +02:00
Jesse Yurkovich added
Status
Resolved
and removed
Status
Archived
labels 2024-04-23 21:17:36 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96182
No description provided.